# mascal

./: 279.js  454.js  554.js  Cargo.toml  README.md  index.html  index.js  rust-toolchain.toml
.github/workflows/: rust-wasm-deploy.yml
cli/: Cargo.toml
cli/src/: debugger.rs  main.rs
parser/src/: bytecode.rs  coercion.rs  compiler.rs  complexity.rs  eval_error.rs  format_ast.rs  func.rs  interpreter.rs  iter_types.rs  leb128.rs  lib.rs  parser.rs  std_fns.rs  type_checker.rs  type_decl.rs  type_infer.rs  type_set.rs  type_tags.rs  value.rs  vm.rs
parser/tests/: compiler.rs
scripts/: array_in_arg.dragon  array_of_structs.dragon  array_overrun.dragon  array_range_sized.dragon  array_reverse.dragon  cmp.dragon  factorial.dragon  fibonacci.dragon  fn_callback.dragon  fn_obj.dragon  fn_return.dragon  for.dragon  if.dragon  jHitSphere-complex.dragon  jHitSphere.dragon  mandel.dragon  mandel_canvas.dragon  mutual_recursion.dragon  pipe.dragon  recurse.dragon  sieve.dragon  struct.dragon  struct_arg.dragon  struct_complex.dragon  struct_nested.dragon  struct_return.dragon  type_infer.dragon  type_infer_array.dragon  type_infer_tuple.dragon
scripts/scripts/: array_overrun.dragon  array_resize.dragon  fn.dragon  fn_callback.dragon  fn_default.dragon  fn_default_const.dragon  fn_obj.dragon  fn_obj_ret.dragon  (+7 more)
vscode-ext/: .gitignore  .vscodeignore  README.md  esbuild.js  package.json  pnpm-lock.yaml
wasm/: Cargo.toml  index.html  package-lock.json  package.json  webpack.config.js
wasm/js/: main.js  parser.js
wasm/scripts/: mandel_canvas.dragon
wasm/src/: lib.rs
(+25 files in other folders)
