[package]
name = "mascal-wasm"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.126"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.103"
libm = "0.2.16"

mascal = { path = "../parser" }
wasm-bindgen-macro-support = "0.2.126"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.103"
features = [
    'CanvasRenderingContext2d',
    'ImageBitmap',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'HtmlDivElement',
    'CssStyleDeclaration',
    'Node',
    'MouseEvent',
    'Document',
    'ImageData',
    'Window',
    'Storage',
]

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-O2", "--enable-mutable-globals"]
